feat: nginx docs

--- a/ansible/admin/nginx/static/index.html
+++ b/ansible/admin/nginx/static/index.html
@@ -1,13 +1,15 @@
 <html>
 
 <head>
-    <title>Krondor Cloud</title>
+    <title>Krondor Hetzner IaC</title>
 </head>
 
 <body>
-    <h1>cloud.krondor.org</h1>
-    <p>Welcome to the Krondor Cloud.</p>
-    <p>Right now this is just a placeholder site.</p>
+    <h1>Thank's for stopping by</h1>
+    <p>This server hosts my personal networked services:</p>
+    <ul>
+        <li>Nothin at the moment!</li>
+    </ul>
 </body>
 
 </html>
